--- a/interfaces/Glitter/templates/include_overlays.tmpl
+++ b/interfaces/Glitter/templates/include_overlays.tmpl
@@ -400,10 +400,10 @@
                             </div>
                             <div class="form-group form-checkbox">
                                 <label class="col-sm-6 control-label">
-                                    $T("Glitter-displayUnlimitedWidth")
+                                    $T("Glitter-displayFullWidth")
                                 </label>
                                 <div class="col-sm-4">
-                                    <input type="checkbox" name="displayUnlimitedWidth" value="true" data-bind="checked: displayUnlimitedWidth" />
+                                    <input type="checkbox" name="displayFullWidth" value="true" data-bind="checked: displayFullWidth" />
                                 </div>
                             </div>
                             <div class="form-group form-checkbox">
