Do not show extra columns on <1200px

--- a/interfaces/Glitter/templates/include_history.tmpl
+++ b/interfaces/Glitter/templates/include_history.tmpl
@@ -7,7 +7,7 @@
                 <th></th>
                 <th class="table-status-header" data-bind="css: { 'table-header-status-smaller' : extraHistoryColumns().length }"></th>
                 <!-- ko foreach: extraHistoryColumns -->
-                <th class="table-header-extra" style="width:6%"></th>
+                <th class="table-header-extra table-extra-header-visible"></th>
                 <!-- /ko -->
                 <th style="width: 130px;"></th>
                 <th style="width: 60px;"></th>
