--- a/interfaces/Glitter/templates/include_queue.tmpl
+++ b/interfaces/Glitter/templates/include_queue.tmpl
@@ -68,7 +68,7 @@
                 <th style="width: 25px;"></th>
                 <th></th>
                 <!-- ko foreach: extraQueueColumns -->
-                <th style="width:6%"></th>
+                <th class="table-header-extra table-extra-header-visible"></th>
                 <!-- /ko -->
                 <th class="table-header-progress" data-bind="css: { 'table-header-progress-smaller' : extraQueueColumns().length }"></th>
                 <th style="width: 85px;"></th>
