--- a/interfaces/Config/templates/config_rss.tmpl
+++ b/interfaces/Config/templates/config_rss.tmpl
@@ -108,12 +108,12 @@
             <a class="main-helplink" href="$helpuri$help_uri" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a>
             <h2 class="nomargin activeRSS">
                 <a href="${root}config/rss/">$T('cmenu-rss')</a> &raquo;
-                <a href="$rss[$active_feed]['uri']" onclick="window.open(this.href); return false;">$active_feed</a>
+                $active_feed
             </h2>
             <!--#if $error#-->
             <div class="alert alert-danger">
                 <span class="glyphicon glyphicon-exclamation-sign"></span>
-                $error
+                <!--#echo html.escape($error)#-->
             </div>
             <!--#end if#-->
             <form action="upd_rss_feed" method="post">
