--- a/interfaces/Glitter/templates/include_overlays.tmpl
+++ b/interfaces/Glitter/templates/include_overlays.tmpl
@@ -444,14 +444,14 @@
 
 <div id="modal-add-nzb" class="modal fade" tabindex="-1">
     <div class="modal-dialog">
-        <div class="modal-content">
+        <form class="modal-content" data-bind="submit: addNZB">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
                 <h4 class="modal-title">$T('Glitter-addNZB')</h4>
             </div>
             <div class="modal-body form-horizontal">
                 <div class="row">
-                    <form data-bind="submit: addNZBFromURL" class="col-sm-6">
+                    <div class="col-sm-6">
                         <fieldset>
                             <legend class="row-wrap-text">$T('Glitter-addFromURL')</legend>
                             <div class="input-group" data-tooltip="true" data-placement="bottom" title="$file_exts">
@@ -461,8 +461,8 @@
                                 </span>
                             </div>
                         </fieldset>
-                    </form>
-                    <form data-bind="submit: addNZBFromFileForm" class="col-sm-6">
+                    </div>
+                    <div class="col-sm-6">
                         <fieldset>
                             <legend class="row-wrap-text">$T('Glitter-addFromFile')</legend>
                             <div class="input-group" data-tooltip="true" data-placement="bottom" title="$file_exts">
@@ -476,7 +476,7 @@
                                 </span>
                             </div>
                         </fieldset>
-                    </form>
+                    </div>
                 </div>
                 <div class="clearfix"></div>
                 <hr />
