--- a/interfaces/Glitter/templates/static/stylesheets/colorschemes/Night.css
+++ b/interfaces/Glitter/templates/static/stylesheets/colorschemes/Night.css
@@ -248,6 +248,13 @@ hr {
     border-top: none;
 }
 
+.form-control:focus,
+input[type="submit"]:focus,
+button:focus {
+    box-shadow: 0 0 0 0.25rem rgba(255, 255, 255, 0.3) !important;
+    outline: initial;
+}
+
 /* Placeholders - Will not work if grouped! */
 ::-webkit-input-placeholder {
    color: #EBEBEB !important;
