--- a/interfaces/Glitter/templates/include_overlays.tmpl
+++ b/interfaces/Glitter/templates/include_overlays.tmpl
@@ -443,7 +443,7 @@
 </div>
 
 <div id="modal-add-nzb" class="modal fade" tabindex="-1">
-    <div class="modal-dialog">
+    <form class="modal-dialog">
         <form class="modal-content" data-bind="submit: addNZB">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
@@ -522,7 +522,7 @@
                 </div>
                 <div class="clearfix"></div>
             </div>
-        </div>
+        </form>
     </div>
 </div>
 
