--- a/interfaces/Config/templates/config_folders.tmpl
+++ b/interfaces/Config/templates/config_folders.tmpl
@@ -39,12 +39,12 @@
                 <div class="field-pair advanced-settings">
                     <label class="config" for="complete_free">$T('opt-complete_free')</label>
                     <input type="text" name="complete_free" id="complete_free" value="$complete_free" class="smaller_input" />
-                    <span class="desc">$T('explain-complete_free')</span>
+                    <span class="desc">$T('explain-download_free') <br>$T('explain-complete_free')</span>
                 </div>
                 <div class="field-pair advanced-settings">
                     <label class="config" for="fulldisk_autoresume">$T('opt-fulldisk_autoresume')</label>
                     <input type="checkbox" name="fulldisk_autoresume" id="fulldisk_autoresume" value="1" <!--#if int($fulldisk_autoresume) > 0 then 'checked="checked"' else ""#--> />
-                    <span class="desc">$T('explain-fulldisk_autoresume')</span>
+                    <span class="desc"><!--#echo $T('explain-fulldisk_autoresume') % 15#--></span>
                 </div>
                 <!--#if not $nt#-->
                 <div class="field-pair advanced-settings">
