'Every few minutes'

--- a/interfaces/Config/templates/config_folders.tmpl
+++ b/interfaces/Config/templates/config_folders.tmpl
@@ -44,7 +44,7 @@
                 <div class="field-pair advanced-settings">
                     <label class="config" for="fulldisk_autoresume">$T('opt-fulldisk_autoresume')</label>
                     <input type="checkbox" name="fulldisk_autoresume" id="fulldisk_autoresume" value="1" <!--#if int($fulldisk_autoresume) > 0 then 'checked="checked"' else ""#--> />
-                    <span class="desc"><!--#echo $T('explain-fulldisk_autoresume') % 15#--></span>
+                    <span class="desc">$T('explain-fulldisk_autoresume')</span>
                 </div>
                 <!--#if not $nt#-->
                 <div class="field-pair advanced-settings">
