Pause on full Complete Download Folder and regularly check if there is enough space to resume (#1724)
* Add pause on full Complete Download Folder and optional time limit for full disk pause

* Use nzo.bytes_tried in completed dir disk full check

* It's so black or white

* Don't pause on full download disk until it's necessary and don't apply timed pause to temporary disk

* Simpler ifs

* Compare with downloaded bytes, not remaining

* Fix comparison

* Increase pause check to 90% finished

* Subtract par2 files and increase limit to 95%

* Use checkbox for automatic resume and task scheduler for checking free space

* Make canceling resume task a separate method

* Black

* Replace some logging.debug with logging.info

* Remove sabnzbd.directunpacker.abort_all

* Rewrite explain-fulldisk_autoresume explanation

* Ignore complete_free if 0

* Style changes

* Remove scheduled task if the downloading is continued

* 'Every few minutes'

* Fix unchecking of fulldisk_autoresume in config page and don't do autoresume task if it has been disabled

* Black is rather picky

Co-authored-by: Safihre <safihre@sabnzbd.org>

--- a/interfaces/Config/templates/config_folders.tmpl
+++ b/interfaces/Config/templates/config_folders.tmpl
@@ -28,13 +28,23 @@
                 </div>
                 <div class="field-pair advanced-settings">
                     <label class="config" for="download_free">$T('opt-download_free')</label>
-                    <input type="text" name="download_free" id="download_free" value="$download_free" class="smaller_input"  />
+                    <input type="text" name="download_free" id="download_free" value="$download_free" class="smaller_input" />
                     <span class="desc">$T('explain-download_free')</span>
                 </div>
                 <div class="field-pair">
                     <label class="config" for="complete_dir">$T('opt-complete_dir')</label>
                     <input type="text" name="complete_dir" id="complete_dir" value="$complete_dir" data-initialdir="$my_home" />
                     <span class="desc">$T('explain-complete_dir')</span>
+                </div>
+                <div class="field-pair advanced-settings">
+                    <label class="config" for="complete_free">$T('opt-complete_free')</label>
+                    <input type="text" name="complete_free" id="complete_free" value="$complete_free" class="smaller_input" />
+                    <span class="desc">$T('explain-download_free') <br>$T('explain-complete_free')</span>
+                </div>
+                <div class="field-pair advanced-settings">
+                    <label class="config" for="fulldisk_autoresume">$T('opt-fulldisk_autoresume')</label>
+                    <input type="checkbox" name="fulldisk_autoresume" id="fulldisk_autoresume" value="1" <!--#if int($fulldisk_autoresume) > 0 then 'checked="checked"' else ""#--> />
+                    <span class="desc">$T('explain-fulldisk_autoresume')</span>
                 </div>
                 <!--#if not $nt#-->
                 <div class="field-pair advanced-settings">
