Correct "Form element for Add NZB window was not closed breaking ..."

--- a/interfaces/Glitter/templates/include_overlays.tmpl
+++ b/interfaces/Glitter/templates/include_overlays.tmpl
@@ -445,7 +445,7 @@
 </div>
 
 <div id="modal-add-nzb" class="modal fade" tabindex="-1">
-    <form class="modal-dialog">
+    <div class="modal-dialog">
         <form class="modal-content" data-bind="submit: addNZB">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
